RESOLVED FIXED45960
WK2: REGRESSION (r66156): Web sites using AppleConnect fail to log in: "HTTP Status 404 - /ssowebapp/scriptFrame"
https://bugs.webkit.org/show_bug.cgi?id=45960
Summary WK2: REGRESSION (r66156): Web sites using AppleConnect fail to log in: "HTTP ...
Andy Estes
Reported 2010-09-17 06:17:25 PDT
In http://trac.webkit.org/changeset/66437, WebKit was modified to workaround a bug in the AppleConnect plug-in. This workaround needs to be in WebKit2 as well.
Attachments
Patch (2.72 KB, patch)
2010-09-17 06:19 PDT, Andy Estes
no flags
Patch (2.47 KB, patch)
2010-09-17 06:20 PDT, Andy Estes
no flags
Patch (1.92 KB, patch)
2010-09-20 01:33 PDT, Andy Estes
darin: review+
Andy Estes
Comment 1 2010-09-17 06:17:46 PDT
Andy Estes
Comment 2 2010-09-17 06:19:21 PDT
Andy Estes
Comment 3 2010-09-17 06:20:56 PDT
Darin Adler
Comment 4 2010-09-17 10:02:03 PDT
Comment on attachment 67906 [details] Patch > Plugin::Parameters parameters; > parameters.url = url; > - parameters.names = paramNames; > parameters.values = paramValues; > parameters.mimeType = mimeType; > parameters.loadManually = loadManually; > + > + // <rdar://problem/8440903>: AppleConnect has a bug where it does not > + // understand the parameter names specified in the <object> element that > + // embeds its plug-in. This hack works around the issue by converting the > + // parameter names to lowercase before passing them to the plug-in. > + if (equalIgnoringCase(mimeType, "application/x-snkp")) { > + parameters.names.reserveCapacity(paramNames.size()); > + for (size_t i = 0; i < paramNames.size(); ++i) > + parameters.names.append(paramNames[i].lower()); > + } else > + parameters.names = paramNames; Why not leave the line of code above alone, and write the new code as a removable block. That seems to isolate the AppleConnect workaround a little better from the non-workaround code. r=me
Andy Estes
Comment 5 2010-09-17 14:50:37 PDT
Andy Estes
Comment 6 2010-09-20 00:49:52 PDT
Reopening to address additional feedback from Darin.
Andy Estes
Comment 7 2010-09-20 01:02:01 PDT
Filed https://bugs.webkit.org/show_bug.cgi?id=46076 to track adding support for enabling site-specific quirks in WebKit2.
Andy Estes
Comment 8 2010-09-20 01:33:07 PDT
Andy Estes
Comment 9 2010-09-20 10:14:44 PDT
Note You need to log in before you can comment on or make changes to this bug.