2010-09-17  Andy Estes  <aestes@apple.com>

Reviewed by Darin Adler.

        <rdar://problem/8440903> WK2: REGRESSION (r66156): Web sites using
        AppleConnect fail to log in: "HTTP Status 404 - /ssowebapp/scriptFrame"
        https://bugs.webkit.org/show_bug.cgi?id=45960

        * WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:
        (WebKit::WebFrameLoaderClient::createPlugin):


Canonical link: https://commits.webkit.org/58455@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67748 268f45cc-cd09-0410-ab3c-d52691b4dbfc